--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,8 @@ before_script:
   - composer install
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar"
+  - "java -jar selenium-server-standalone-2.31.0.jar > /dev/null &"
+  - sleep 5
 
 script: protected/vendor/bin/phpunit
