--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ php:
   - 5.5
   - hhvm
 
+addons:
+  firefox: "17.0"
+
 install:
-  - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-  - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
-  - sudo apt-get update
-  - sudo apt-get install google-chrome-stable
   - composer install
 
 before_script:
@@ -18,6 +17,6 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - "wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar"
   - "java -jar selenium-server-standalone-2.31.0.jar > /dev/null &"
-  - sleep 15
+  - sleep 5
 
 script: protected/vendor/bin/phpunit
