--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine on
 
 RedirectMatch 403 /\..*$
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php
 #RewriteRule ^(.*)$ index.php
