Migrate not interactive

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ php:
 script:
   - cd protected/
   - composer install
-  - php yiic migrate
+  - php yiic migrate --interactive=0
   - cd tests/
   - phpunit
