--- a/protected/composer.json
+++ b/protected/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "php": ">=5.3.2",
-    "yiisoft/yii": "1.1.*"
+    "yiisoft/yii": "1.1.*",
+    "willwharton/yii-twitter": "dev-master"
   },
   "require-dev": {
     "phpunit/dbunit": "*",
